# gru-triton

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  manifest  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: TESTING.md
.planning/debug/: collect_failure_ratios.py  monarch-rounding-mismatch.md  repro_monarch_rounding.py
.planning/phases/01-reference-path-parity-vs-nn-gru/: 01-CONTEXT.md  01-DISCUSSION-LOG.md  01-VERIFICATION.md
.planning/phases/02-triton-fast-path-parity-vs-reference/: 02-04-SUMMARY.md  02-05-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-structured-pytorch-fallback-parity/: 03-02-SUMMARY.md  03-VERIFICATION.md
.planning/phases/04-quant-on-bit-identity/: 04-01-PLAN.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-04-PLAN.md  04-05-PLAN.md  04-DISPOSITION.md  04-PATTERNS.md  04-SUMMARY.md  04-VERIFICATION.md  deferred-items.md
.planning/phases/05-calibration-freeze-lifecycle/: 05-CONTEXT.md  05-DISCUSSION-LOG.md
.planning/phases/06-edge-case-sweeps/: 06-01-PLAN.md
.planning/phases/07-audit-report-findings-handling/: 07-01-PLAN.md  07-02-PLAN.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-04-SUMMARY.md  07-RESEARCH.md  07-REVIEW.md  07-VERIFICATION.md  07-git-log-audit.txt  07-pytest-output.txt
.planning/quick/260515-t9m-wire-up-structured-optional-dependency-e/: 260515-t9m-SUMMARY.md
bench/: bench_triton_fwd.py  bench_triton_train.py
src/gru_qat/: calibration.py  gru_cell.py  gru_layer.py  quantizers.py  ste.py  structure.py
src/gru_qat/triton_kernels/: scan.py  scan_butterfly.py  scan_diagonal.py  scan_monarch.py
tests/: test_butterfly_dispatch.py  test_calibration.py  test_edge_cases.py  test_layer_parity.py  test_scan_wrapper_validation.py  test_structure_parity.py  test_structured_input_dispatch.py  test_triton_butterfly_strict.py  test_triton_diagonal.py  test_triton_diagonal_strict.py  test_triton_monarch.py  test_triton_monarch_strict.py  test_triton_scan.py  test_triton_scan_strict.py
